syntax = "proto3";

option csharp_namespace = "Ecommerce.Services";

package ecommerce;

service UserService {
    rpc GetAllUsers (google.protobuf.Empty) returns (UserList);
    rpc GetUser (UserRequest) returns (UserResponse);
    rpc CreateUser (UserRequest) returns (UserResponse);
    rpc DeleteUser (UserRequest) returns (google.protobuf.Empty);
}

message UserRequest {
    int32 id = 1;
    string fullName = 2;
    string email = 3;
    string password = 4;
}

message UserResponse {
    int32 id = 1;
    string fullName = 2;
    string email = 3;
}

message UserList {
    repeated UserResponse users = 1;
}
